--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- home section starts -->
     <div class="header">
-        <img class="img1" src="images/logo.JPG" alt="">
+        <img class="img1" src="images/loggo.JPG" alt="">
         <ul class="list">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
